# mojo_opset

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ascend_accuracy_ci.yml
example_models/: mojo_qwen3_dense.py
examples/: run_model.sh
modeling/: mojo_qwen3_dense.py  mojo_qwen3_moe.py  torch_qwen3_dense.py
mojo_opset/: __init__.py  mojo_monkey_patch.py  mojo_register.py
mojo_opset/backends/: __init__.py
mojo_opset/backends/analysis/: __init__.py
mojo_opset/backends/ref/: __init__.py
mojo_opset/backends/ttx/: __init__.py  activation.py  add_norm.py  attention.py  conv.py  loss.py  norm.py  pos_emb.py  sample.py
mojo_opset/backends/ttx_kernels/: add_norm.py  attention.py  norm.py
mojo_opset/backends/xpu_ops/: __init__.py  gelu_act.py  silu_func.py
mojo_opset/core/: __init__.py  backend_registry.py  function.py  mojo_function.py  mojo_operator.py  operator.py
mojo_opset/experimental/: __init__.py
mojo_opset/modeling/: inference_demo.py  mojo_qwen3_dense.py  torch_qwen3_dense.py
mojo_opset/utils/: acc.py  hf_utils.py  logging.py  misc.py  patching.py  platform.py  tracing.py
tests/: test_qwen3_dense_patching.py  utils.py
tests/base/: test_assertion_rewrite.py  test_backend_dispatch.py  test_tensor_device_guard.py
tests/norm/: test_add_norm.py  test_norm.py
tests/perf/: benchmark.md  test_activation.py  test_attention.py  test_kv_cache.py  test_normalization.py  test_position_embedding.py  test_sampling.py
tests/test_ttx_graph/: test_activation.py  test_attn.py  test_loss.py  test_norm.py  test_rope.py
(+115 files in other folders)
